[INJICERT-1249] Add upload CA certificate api
